Fix potential bugs related to system settings